test/invalid/function_args.ml
function f a b
    return a + b

print f(1, 2)
print f(1)
print f()
print f(1, 2, 3)